# MyProjects

BinaryTree/: BinaryTree.pro  binstree.h  main.cpp  treenode.h
CConsoleFileInputOutput/: main.cpp
CURRENT_WORK/: nbody.cpp
ConsoleSnakeGame/: main.cpp
CrossSectionGetCSandGetFSFromPartialSums/: writeDDApproximationCSandPartialSumsToFile.cpp
EnglishVocabulary/: mainwindow.ui  res.qrc
LinkedList/: BinaryTree.h  CMakeCache.txt  CMakeLists.txt  LinkedList.h  Makefile  Test  cmake_install.cmake  main.cpp
MathamaticalEquationsParser/: main.cpp
MathematicalEquationsParser/: parser.cpp
PrimitiveConsoleSnakeGame/: Snake.cpp  Snake.h  Snake.pro  main.cpp  resource.qrc
PrimitiveImitationOfParticlesTransportSimulationAtWork/: main.cpp
PrimitivePlaneShootOncomingPlanesGame/: bullet.h  enemy.cpp  enemy.h  main.cpp  score.cpp  score.h
QtCounterDialogGUI/: QtCounterGUI.pro  counter.cpp  counter.h  main.cpp  mainui.cpp  mainui.h  mainui.ui
SStream/: File1.h  SStream.pro  file2.h  main.cpp
SimpleNumberSystemsConvertionProgramUsingInheritance/: main.cpp
Sort/: main.cpp
TrigonometricFunctionsRealization/: CMakeCache.txt  CMakeLists.txt  Makefile  Test  cmake_install.cmake  main.cpp
Tutorial.PrimitivePlaneShootingOncomingPlanesGame/: Tutorial1.pro  bullet.cpp  game.cpp  player.cpp  player.h  res.qrc
VALIDATION_OF_THERMONUCLEAR_REACTION/CORRECT_VALIDATION_OF_THERMONUCLEAR_REACTION_2_MEV_LINEAR_INTERPOLATION_OF_COS_THETA_CM/outdist/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  outdist
build-LinkedList-Desktop-u041fu043e u0443u043cu043eu043bu0447u0430u043du0438u044e/: CMakeCache.txt  Makefile  Test  Test.cbp  cmake_install.cmake
voc/: main.cpp  mainwindow.cpp  mainwindow.h  voc.pro
(+142 files in other folders)
